RESOLVED FIXED132728
REGRESSION (r168518): Multiple tests for workers in blobs assert
https://bugs.webkit.org/show_bug.cgi?id=132728
Summary REGRESSION (r168518): Multiple tests for workers in blobs assert
Alexey Proskuryakov
Reported 2014-05-08 23:17:27 PDT
fast/files/workers/worker-apply-blob-url-to-xhr.html fast/files/workers/worker-read-blob-async.html fast/files/workers/worker-read-blob-sync.html fast/files/workers/worker-read-file-async.html fast/files/workers/worker-read-file-sync.html fast/workers/worker-copy-shared-blob-url.html Thread 13 Crashed:: WebCore: Worker 0 com.apple.JavaScriptCore 0x0000000103a5e17a WTFCrash + 42 (Assertions.cpp:333) 1 com.apple.WebCore 0x00000001062586b8 WebCore::MIMETypeRegistry::getMIMETypeForExtension(WTF::String const&) + 72 (MIMETypeRegistryMac.mm:39) 2 com.apple.WebCore 0x00000001053f7676 WebCore::File::computeNameAndContentType(WTF::String const&, WTF::String const&, WTF::String&, WTF::String&) + 310 (File.cpp:89) 3 com.apple.WebCore 0x00000001053f78e6 WebCore::File::File(WebCore::Blob::DeserializationContructor, WTF::String const&, WebCore::URL const&, WTF::String const&) + 214 (File.cpp:66) 4 com.apple.WebCore 0x00000001053f7803 WebCore::File::File(WebCore::Blob::DeserializationContructor, WTF::String const&, WebCore::URL const&, WTF::String const&) + 51 (File.cpp:67) 5 com.apple.WebCore 0x000000010684594e WebCore::File::deserialize(WTF::String const&, WebCore::URL const&, WTF::String const&) + 78 (File.h:46) 6 com.apple.WebCore 0x0000000106840661 WebCore::CloneDeserializer::readFile(WTF::RefPtr<WebCore::File>&) + 305 (SerializedScriptValue.cpp:1734)
Attachments
proposed fix (6.43 KB, patch)
2014-05-09 11:23 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-05-08 23:20:21 PDT
Skipped in <http://trac.webkit.org/r168522>. Will investigate soon.
Alexey Proskuryakov
Comment 2 2014-05-09 11:23:17 PDT
Created attachment 231169 [details] proposed fix
Geoffrey Garen
Comment 3 2014-05-09 12:00:47 PDT
Comment on attachment 231169 [details] proposed fix r=me
WebKit Commit Bot
Comment 4 2014-05-09 14:24:30 PDT
Comment on attachment 231169 [details] proposed fix Clearing flags on attachment: 231169 Committed r168554: <http://trac.webkit.org/changeset/168554>
WebKit Commit Bot
Comment 5 2014-05-09 14:24:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.