REGRESSION (r168518): Multiple tests for workers in blobs assert https://bugs.webkit.org/show_bug.cgi?id=132728

Reviewed by Geoffrey Garen.

Source/WebCore:
Change File serialization to include name, so that we don't have to regenerate anything
on a secondary thread after deserialization.

Files and Blobs can't be stored persistently, because URLs are transient (IndexedDB
has an explicit check, and fails if there were any blob URLs). API doesn't have the
check, but given that anyone who tried to use these to serialize a File would fail,
it seems OK to change the format.

* bindings/js/SerializedScriptValue.cpp:
(WebCore::CloneSerializer::write):
(WebCore::CloneDeserializer::readFile):
* fileapi/File.cpp:
(WebCore::File::File):
* fileapi/File.h:

LayoutTests:
* platform/mac/TestExpectations: Unskip the tests.


Canonical link: https://commits.webkit.org/150800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168554 268f45cc-cd09-0410-ab3c-d52691b4dbfc